--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <!--=============== FAVICON ===============-->
+        <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
+        
+        <!--=============== REMIX ICONS ===============-->
+        <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+
+        <!--=============== CSS ===============-->
+        <link rel="stylesheet" href="assets/css/styles.css">
+
+        <title>Project WHY ARE YOU RUNNING Copyright </title>
+    </head>
+    <body>
+<meta http-equiv="Refresh" content="0; url='http://wayr.mobie.in/index.html'" />
+<meta http-equiv="refresh" content="7; url='http://wayr.mobie.in/index.html'" />
